fix(frontend): Make geocoder text visible
Text color used was a holdover, I've now changed it so that
it contrasts well with backround.

IssueID #

--- a/client/src/map/map-layout.module.css
+++ b/client/src/map/map-layout.module.css
@@ -144,7 +144,7 @@
 
 .map :global(.mapboxgl-ctrl-geocoder) input[type='text'],
 .map :global(.mapboxgl-ctrl-geocoder) input[type='text']::placeholder {
-  color: var(--foreground-color);
+  color: #fff;
 }
 
 .map :global(.mapboxgl-control-container) :global(.mapboxgl-ctrl-bottom-right) {
